Fix MAKE OFFER button dual-color by replacing background image with CSS
The button used a background-image PNG overlay on top of the green
bidnow-btn background, causing a split appearance when the image
didn't cover the full button width. Replaced with solid CSS styling
and added value="MAKE OFFER" as button text across all templates.

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -2809,9 +2809,8 @@ right: 144px;*/
 }
 
 .makeoffer {
-	background-image: url(https://d294w6g1afjpvs.cloudfront.net/images/make-offer-btn.png);
-	background-repeat: no-repeat;
-	background-position: left top;
+	background: #3A6152;
+	width: 110px;
 }
 
 .BuyNow {
